welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while(fini=false){
          ^BDRBuggle:5: error: not found: value R
	if (litMessage()==R) {
                          ^BDRBuggle:10: error: not found: value L
	if (litMessage()==L) {
                          ^BDRBuggle:15: error: not found: value I
	if (litMessage()==I) {
                          ^BDRBuggle:20: error: not found: value A
	if (litMessage()==A) {
                          ^BDRBuggle:24: error: not found: value B
	if (litMessage()==B) {
                          ^BDRBuggle:28: error: not found: value C
	if (litMessage()==C) {
                          ^BDRBuggle:32: error: not found: value Z
	if (litMessage()==Z) {
                          ^BDRBuggle:36: error: not found: value Y
	if (litMessage()==Y) {
                          ^BDRBuggle:40: error: not found: value X
	if (litMessage()==X) {
                          ^